...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <TableLayout
            android:id="@+id/fragment_transaction_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dialog_padding"
            android:stretchColumns="1">

...
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="4">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/input_transaction_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:hint="@string/label_transaction_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:nextFocusDown="@+id/input_transaction_amount"
                        android:singleLine="true"
                        android:textSize="22sp">

                        <requestFocus />
                    </com.google.android.material.textfield.MaterialAutoCompleteTextView>
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:id="@+id/input_transaction_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:hint="@string/label_transaction_amount"
                    android:nextFocusDown="@+id/notes"
                    android:textColor="@color/debit_red"
                    android:textSize="20sp" />

                <org.gnucash.android.ui.util.widget.TransactionTypeSwitch
                    android:id="@+id/input_transaction_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/debit_red"
                    android:textOff="@string/label_credit"
                    android:textOn="@string/label_debit"
                    android:textSize="14sp"
                    tools:text="@string/label_debit" />

                <ImageView
                    android:id="@+id/btn_split_editor"
                    style="@style/FormIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="0dp"
                    android:contentDescription="@string/title_split_editor"
...

                <ImageView
                    style="@style/FormIcon"
                    android:src="@drawable/ic_account" />

                <Spinner
                    android:id="@+id/input_transfer_account_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="40dp" />
            </TableRow>

...

                <ImageView
                    style="@style/FormIcon"
                    android:src="@drawable/ic_day" />

                <TextView
                    android:id="@+id/input_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/input_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="4dp" />
            </TableRow>
...
