...
    <string name="toast_passcode_set">Passcode set</string>
    <string name="label_confirm_passcode">Please confirm your passcode</string>
    <string name="toast_invalid_passcode_confirmation">Invalid passcode confirmation. Please try again</string>
    <!-- msgid "Description" -->
    <string name="description">Description</string>
    <string name="label_transaction_amount">Amount</string>
    <string name="title_add_transaction">New transaction</string>
    <string name="label_no_transactions">No transactions to display</string>
    <string name="label_debit">Debit</string>
    <string name="label_credit">Credit</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">Delete</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="title_delete_account">Delete Account</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="label_transaction_description">Add note</string>
...
    <string name="account_balance">Balance</string>
    <string name="toast_no_account_name_entered">Enter an account name to create an account</string>
    <string name="label_account_currency">Currency</string>
    <string name="label_parent_account">Parent account</string>
    <string name="title_xml_ofx_header">Use XML OFX header</string>
    <string name="summary_xml_ofx_header">Enable this option when exporting to third-party application other than GnuCash for desktop</string>
    <string name="toast_transaction_amount_required">Enter an amount to save the transaction</string>
    <string name="toast_error_importing_accounts">An error occurred while importing the GnuCash accounts</string>
    <string name="toast_success_importing_accounts">GnuCash Accounts successfully imported</string>
    <string name="summary_import_accounts">Import account structure from GnuCash XML</string>
    <string name="title_import_accounts">Import GnuCash XML</string>
    <string name="summary_delete_all_accounts">Delete all accounts in the database. All transactions will be deleted as well.</string>
    <string name="title_delete_all_accounts">Delete all accounts</string>
...
    <string name="summary_create_default_accounts">Creates default GnuCash commonly-used account structure</string>
    <string name="title_create_default_accounts">Create default accounts</string>
    <string name="msg_confirm_create_default_accounts_setting">A new book will be opened with the default accounts\n\nYour current accounts and transactions will not be modified!</string>
    <string name="title_scheduled_transactions">Transactions</string>
    <string name="title_select_export_destination">Select destination for export</string>
    <string name="hint_split_memo">Memo</string>
    <string name="label_spend">Spend</string>
    <string name="label_receive">Receive</string>
    <string name="label_withdrawal">Withdrawal</string>
    <string name="label_deposit">Deposit</string>
    <string name="label_payment">Payment</string>
    <string name="label_charge">Charge</string>
    <string name="label_decrease">Decrease</string>
    <string name="label_increase">Increase</string>
...
    <string name="title_transfer_funds">Transfer Funds</string>
    <string name="nav_menu_help"><![CDATA[Help & Feedback]]></string>
    <string name="label_select_pie_slice_to_see_details">Select a slice to see details</string>
    <string name="label_report_period">Period:</string>
    <string name="label_convert_from">From:</string>
    <string name="label_convert_to">To:</string>
    <string name="msg_provide_exchange_rate">Provide either the converted amount or exchange rate in order to transfer funds</string>
    <string name="hint_exchange_rate">Exchange rate</string>
    <string name="btn_fetch_quote">Fetch quote</string>
    <string name="hint_converted_amount">Converted Amount</string>
    <string name="title_report_sheet">Sheet</string>
    <string name="label_last_3_months_expenses">Expenses for last 3 months</string>
    <string name="label_total_assets">Total Assets</string>
...
    <string name="label_balance_sheet_total">Total:</string>
    <string name="title_discuss">GitHub Discussions</string>
    <string name="title_translate_gnucash">Translate GnuCash</string>
    <string name="summary_discuss">Share ideas, discuss changes or report problems</string>
    <string name="summary_translate_gnucash">Translate or proof-read on CrowdIn</string>
    <string name="toast_no_compatible_apps_to_receive_export">No compatible apps to receive the exported transactions!</string>
    <string name="menu_move_transaction">Move…</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="title_cash_flow_report">Cash Flow</string>
    <string name="title_budgets">Budgets</string>
    <string name="title_use_compact_list">Enable compact view</string>
    <string name="summary_use_compact_list">Enable to always use compact view for transactions list</string>
    <string name="error_invalid_exchange_rate">Invalid exchange rate</string>
...
