...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.gnucash.android.ui.util.widget.EmptyRecyclerView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@android:id/empty"
        android:layout_width="120dp"
...
        android:layout_gravity="center"
        android:contentDescription="No budgets"
        android:src="@drawable/ic_remove_circle"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:contentDescription="Propose Budgets"
        android:src="@drawable/ic_add" />
...
