...
        <include
            android:id="@+id/list_item_2_lines"
            layout="@layout/list_item_2_lines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/options_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/options_menu"
            android:layout_width="wrap_content"
...
            android:src="@drawable/ic_more_vert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/edit_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="16dp"
...
